Opened 4 years ago
Closed 4 years ago
#9694 closed defect (fixed)
ffmpeg fails to decode av1 file if --enable-keyframe-filtering=2 option is set
| Reported by: | Rikitiki | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | undetermined |
| Version: | unspecified | Keywords: | av1 |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug:
How to reproduce:
% ffmpeg.exe -hide_banner -xerror -abort_on empty_output -i KF=2.mkv -map 0:0 -filter:v showinfo=checksum=False -f null - ffmpeg version 5.0-full_build-www.gyan.dev
examples:
KF=1.mkv - the file encoded with --enable-keyframe-filtering=1 KF=2.mkv - the file encoded with --enable-keyframe-filtering=2
output:
[libdav1d @ 000001e09933f9c0] libdav1d 0.9.2-106-g19326c4
[matroska,webm @ 000001e09932cdc0] Could not find codec parameters for stream 0 (Video: av1 (libdav1d) (Main), none(tv), 32x18 [SAR 1:1 DAR 16:9]): unspecified pixel format
Consider increasing the value for the 'analyzeduration' (0) and 'probesize' (5000000) options
Input #0, matroska,webm, from 'D:\temp\KF=2.mkv':
Metadata:
encoder : libwebm-0.3.0.0
ENCODER_SETTINGS: version:3.3.0 --threads=1 --passes=1 --end-usage=q --cpu-used=9 --lag-in-frames=1 --enable-keyframe-filtering=2 --color-primaries=unspecified --transfer-characteristics=unspecified --matrix-coefficients=unspecified --webm --cq-level=30
Duration: 00:00:08.30, start: 0.000000, bitrate: 8 kb/s
Stream #0:0(eng): Video: av1 (Main), none(tv), 32x18 [SAR 1:1 DAR 16:9], 30 fps, 30 tbr, 1k tbn (default)
[libdav1d @ 000001e09932d580] libdav1d 0.9.2-106-g19326c4
Stream mapping:
Stream #0:0 -> #0:0 (av1 (libdav1d) -> wrapped_avframe (native))
Press [q] to stop, [?] for help
Conversion failed!
Attachments (2)
Change History (4)
by , 4 years ago
by , 4 years ago
comment:1 by , 4 years ago
comment:2 by , 4 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Should be fixed in 3e186148ca9ac0c47cec253fdea62b48c9feadd2.
Note:
See TracTickets
for help on using tickets.



It is mentioned:
https://forum.doom9.org/showthread.php?t=183907